--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -13,9 +13,12 @@ jobs:
 
       - name: Install Super-Linter
         uses: github/super-linter@v4
+        with:
+          github-token: ${{ secrets.ACCESS_TOKEN }}
         env:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: '\.(html|js|css)$'
+
       - name: Run Super-Linter
         run: super-linter --fail-on-errors --format summary
 ...
