--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,10 +14,10 @@ jobs:
       - name: Install Super-Linter
         uses: github/super-linter@v4
         with:
-          github-token: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         env:
           DEFAULT_BRANCH: main
-          FILTER_REGEX_EXCLUDE: '\.(html|js|css)$'
+          FILTER_REGEX_EXCLUDE: 'dict|\.(html|js|css)$'
 
       - name: Run Super-Linter
         run: super-linter --fail-on-errors --format summary
