--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -16,6 +16,7 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: 'dict|\.(html|js|css)$'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Super-Linter
         run: super-linter --fail-on-errors --format summary
