edits on yaml file

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,8 +1,13 @@
 ---
 name: Movie Watch List Tracker
 
-on: push
-
+on:
+  push:
+    branches:
+      main
+  
+  pull_request:
+    
 jobs:
   super-linter:
     runs-on: ubuntu-latest
