--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -10,6 +10,8 @@ on:
     branches:
       main
 
+  workflow_dispatch:
+
 jobs:
   super-linter:
     runs-on: ubuntu-latest
@@ -22,6 +24,6 @@ jobs:
         uses: github/super-linter@v4
         env:
           DEFAULT_BRANCH: main
-          FILTER_REGEX_EXCLUDE: 'dict|\.(html|js|css)$'
+          # FILTER_REGEX_EXCLUDE: 'dict|\.(html|js|css)$'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 ...
