--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -24,6 +24,7 @@ jobs:
         uses: github/super-linter@v6
         env:
           DEFAULT_BRANCH: main
+          VALIDATE_JSCPD: false
           # FILTER_REGEX_EXCLUDE: 'dict|\.(html|js|css)$'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 ...
