--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -12,6 +12,8 @@ on:
 
   workflow_dispatch:
 
+permissions: read-all
+
 jobs:
   super-linter:
     runs-on: ubuntu-latest
@@ -21,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Super-Linter
-        uses: github/super-linter@v6
+        uses: github/super-linter@v6.4
         env:
           DEFAULT_BRANCH: main
           VALIDATE_JSCPD: false
