Some changes to increase the code quality.

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -27,6 +27,7 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           VALIDATE_JSCPD: false
+          VALIDATE_HTML: false
           # FILTER_REGEX_EXCLUDE: 'dict|\.(html|js|css)$'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 ...
