--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,13 +4,15 @@ WORKDIR /app
 
 COPY . /app
 
-RUN pip install --no-cache-dir -r requirements.txt && adduser -D -H -u 1000 alham
+RUN pip install --no-cache-dir -r requirements.txt && \
+    adduser -D -H -u 1000 alham && \
+    chown alham data/movies.json && \
+    chmod 770 data/movies.json
 
 USER alham
 
-EXPOSE 8000
+EXPOSE 80
 
 HEALTHCHECK --interval=60s --timeout=10s --start-period=5s --retries=3 CMD [ "python3", "health.py" ]
 
 CMD ["gunicorn", "-b", "0.0.0.0:80", "app:app"]
- 
