--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -32,7 +32,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push the Image
-        uses: docker/build-push-action@5
+        uses: docker/build-push-action@v5
         with:
           push: true
           tags: mralham/movie_watch_list:latest
