--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -33,9 +33,11 @@ jobs:
 
       - name: Build and Push the Image
         uses: docker/build-push-action@v5
+        run: echo "The pwd is:\  $(pwd)"
         with:
           push: true
           tags: mralham/movie_watch_list:latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
           file: /app/Dockerfile
+          pull: true
 ...
