--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -37,6 +37,6 @@ jobs:
           push: true
           tags: mralham/movie_watch_list:latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: /app/Dockerfile
+          file: Dockerfile
           pull: true
 ...
