--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -30,6 +31,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: checkout the repository
+        uses: actions/checkout@v4
 
       - name: echo
         run: |
