Some minor bug fixes

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /app
 
 COPY . /app
 
+RUN "This is the PWD: $(pwd)"
+RUN "This is the ls  $(ls -lh)"
+
 RUN pip install --no-cache-dir -r requirements.txt && \
     adduser -D -H -u 1000 alham && \
     chown alham data/movies.json && \
