--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: change current working directory
-        run: cd app
+        run: pwd
 
       - name: Build and Push the Image
         uses: docker/build-push-action@v5
