--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -33,6 +33,6 @@ jobs:
           push: true
           tags: mralham/movie_watch_list:latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: Dockerfile
+          file: app/
           pull: true
 ...
