--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,8 +10,8 @@ RUN ls
 
 RUN pip install --no-cache-dir -r app/requirements.txt && \
     adduser -D -H -u 1000 alham && \
-    chown alham data/movies.json && \
-    chmod 770 data/movies.json
+    chown alham app/data/movies.json && \
+    chmod 770 app/data/movies.json
 
 USER alham
 
