--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,10 +4,6 @@ WORKDIR /app
 
 COPY . .
 
-RUN pwd
-
-RUN ls
-
 RUN pip install --no-cache-dir -r app/requirements.txt && \
     adduser -D -H -u 1000 alham && \
     chown alham app/data/movies.json && \
@@ -19,4 +15,4 @@ EXPOSE 80
 
 HEALTHCHECK --interval=60s --timeout=10s --start-period=5s --retries=3 CMD [ "python3", "health.py" ]
 
-CMD ["gunicorn", "-b", "0.0.0.0:80", "app.app:app"]
+CMD ["gunicorn", "-b", "0.0.0.0:80", "app:app"]
