--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,13 +2,13 @@
 name: Super-Linter Code Quality checkpoint
 
 on:
-  push:
-    branches:
-      main
+  # push:
+  #   branches:
+  #     main
   
-  pull_request:
-    branches:
-      main
+  # pull_request:
+  #   branches:
+  #     main
 
   workflow_dispatch:
 
