--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
