debugging the Dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -15,4 +15,4 @@ EXPOSE 80
 
 HEALTHCHECK --interval=60s --timeout=10s --start-period=5s --retries=3 CMD [ "python3", "health.py" ]
 
-CMD ["gunicorn", "-b", "0.0.0.0:80", "app"]
+CMD ["gunicorn", "-b", "0.0.0.0:80", "app:app"]
