debugging the Dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,9 +6,11 @@ COPY . .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-RUN adduser -D -H -u 1000 alham && \
-    chown alham data/movies.json && \
-    chmod 770 data/movies.json
+RUN adduser -D -H -u 1000 alham
+
+RUN chown alham data/movies.json
+
+RUN chmod 770 data/movies.json
 
 USER alham
 
